# finlex

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: finlex-api.md  finlex-data-structure.md
plans/: api-data-structure-analysis.md  python-downloader.md
src/finlex_downloader/: __init__.py  cli.py  client.py  downloader.py  listing.py  logging_config.py  state.py  urls.py
src/finlex_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test-data/: .state.json  manifest.json
test-data/act/statute/2026/1/fin@/: main.xml
test-data/act/statute/2026/2/fin@/: main.xml
test-data/act/statute/2026/3/fin@/: main.xml
tests/: test_cli.py  test_client.py  test_downloader.py  test_state.py  test_urls.py
