[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finlex-downloader"
version = "0.1.0"
description = "Download Akoma Ntoso documents from Finlex Open Data API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jonilesk"}
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.22.0",
]

[project.scripts]
finlex-downloader = "finlex_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=finlex_downloader --cov-report=term-missing"
